<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10dp"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLblName"
        android:inputType="textPersonName"
        android:text="Enter your name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM "
        android:hint="@string/enter_name"/>

    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLblEmail"
        android:inputType="textEmailAddress"
        android:text="Enter your email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:hint="@string/enter_your_email"/>
    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLblPhoneNumber"
        android:digits="1234567890"
        android:text="@string/enter_your_phone_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhoneNumber"
        android:importantForAutofill="no"
        android:maxLength="10"
        android:digits="1234567890"
        android:inputType="phone"
        android:hint="@string/enter_your_phone_number"/>
    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:text="@string/enter_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvConfirmPassword"
        android:text="@string/enter_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmPassword"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>

    <TextView
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_can_we_address_you"/>
    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbHe"
            android:layout_weight="1"
            android:text="@string/he"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbShe"
            android:layout_weight="1"
            android:text="@string/she"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbOther"
            android:layout_weight="1"
            android:text="@string/others"/>
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOtherName"
        android:hint="@string/specify"
        android:inputType="textPersonName"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignup"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_gravity="center"
        android:text="@string/signup"/>
</LinearLayout>
</layout>